--- a/main.html
+++ b/main.html
@@ -49,10 +49,41 @@
           </nav>
     </section>
     <section class="home">
-      <h1>WELCOME</h1>
-      <p>
+      <div class="container home_txt">
+        <h1 class="mt-5">WELCOME</h1>
+      <p class="px-5 py-5">
         Topic sentences are similar to mini thesis statements. Like a thesis statement, a topic sentence has a specific main point. Whereas the thesis is the main point of the essay, the topic sentence is the main point of the paragraph. Like the thesis statement, a topic sentence has a unifying function. But a thesis statement or topic sentence alone doesn’t guarantee unity. An essay is unified if all the paragraphs relate to the thesis, whereas a paragraph is unified if all the sentences relate to the topic sentence. Note: Not all paragraphs need topic sentences. In particular, opening and closing paragraphs, which serve different functions from body paragraphs, generally don’t have topic sentences. 
       </p>
-  
+  <button class="px-5 py-3 btn btn-primary register">Register</button>
+      </div>
+      </section>
+
+      <section>
+        <h1 class="gallery pt-5">Gallery</h1>
+        <div class="container">
+          <div class="row py-5">
+            <div class="col-sm">
+              <img style="width: 350px;" src="https://wallpaperaccess.com/full/1996531.jpg" alt="">
+            </div>
+            <div class="col-sm">
+              <img  style="width: 350px;"src="https://wallpaperaccess.com/full/1996531.jpg" alt="">
+            </div>
+            <div class="col-sm">
+              <img  style="width: 350px;"src="https://wallpaperaccess.com/full/1996531.jpg" alt="">
+            </div>
+          </div>
+          <div class="row pb-5">
+            <div class="col-sm">
+              <img style="width: 350px;" src="https://wallpaperaccess.com/full/1996531.jpg" alt="">
+            </div>
+            <div class="col-sm">
+              <img  style="width: 350px;"src="https://wallpaperaccess.com/full/1996531.jpg" alt="">
+            </div>
+            <div class="col-sm">
+              <img  style="width: 350px;"src="https://wallpaperaccess.com/full/1996531.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
 </body>
 </html>
